[package]
name = "dh-ping"
authors = ["Ayrzo"]
version = "1.0.0"
edition = "2021"
description = "A command-line tool of checking Dread Hunger server connectivity"
repository = "https://github.com/Lurito/dh-ping/"
license = "GNU Lesser General Public License"
readme = "./README.md"
publish = true
build = "build.rs"

[dependencies]
termcolor = "1.4"
winapi = { version = "0.3", features = ["winuser", "winnls", "winnt"] }
ctrlc = "3.2"

[build-dependencies]
embed-resource = "2.4.3"
built = "0.7.4"
